Fixes for JPMS.
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>